--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ footer a {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1180px) {
   section {
     margin-left: 20px;
     margin-right: 20px;
@@ -119,4 +119,8 @@ footer a {
 
 .css-1flt7uf-MuiTabs-root .MuiTabs-flexContainer{
    justify-content: center !important;
+  }
+
+  .slick-slide > div{
+    margin: 0 10px;
   }
