--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ button {
   color: white;
   transition: color 0.3s;
 }
+.dark h6 {
+  color: white;
+  transition: color 0.3s;
+}
 .dark svg {
   color: #0080CF;
   transition: color 0.3s;
