--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
@@ -36,6 +38,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body{
+  overflow-x: hidden;
+  font-family: "Montserrat", sans-serif;
 }
 /* 
 a,
