--- a/src/index.css
+++ b/src/index.css
@@ -178,12 +178,15 @@ li{
 }
 @media screen and (min-width: 768px) {
   .unset {
-    position: unset;
+    position: unset !important;
   }
 }
 @media screen and (max-width: 768px) {
   h4 {
-    font-size: 16px;
+    font-size: 1.2rem;
+  }
+  .unset2 {
+    position: unset !important;
   }
 }
 
