--- a/src/index.css
+++ b/src/index.css
@@ -223,6 +223,11 @@ li{
   border-radius: 10px !important;
 }
 
+.cardShadow{
+  box-shadow: 0px 62px 103.5px 20px #C9C9C940;
+
+}
+
 @media screen and (max-width: 1024px){
     
   html{
