--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Mark-Simonson-Proxima-Nova-Bold"),
+  url("./assets/fonts/Mark-Simonson-Proxima-Nova-Bold.otf")
+    format("opentype");
+}
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 600;
+  src: local("Mark-Simonson-Proxima-Nova-Semibold"),
+  url("./assets/fonts/Mark-Simonson-Proxima-Nova-Semibold.otf")
+    format("opentype");
+}
+@font-face {
+  font-family: "Proxima Nova";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Mark-Simonson-Proxima-Nova-Regular"),
+  url("./assets/fonts/Mark-Simonson-Proxima-Nova-Regular.otf")
+    format("opentype");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -42,7 +68,7 @@
 
 body{
   overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Proxima Nova', sans-serif !important;
 }
 /* 
 a,
@@ -135,7 +161,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Montserrat, "sans-serif";
+  font-family: 'Proxima Nova', sans-serif !important;
 }
 
 section {
@@ -149,10 +175,12 @@ h3 {
 h4 {
   font-size: 1.88rem;
   font-weight: 600;
+  color: black !important;
 }
 
 footer a {
   font-size: 1rem;
+  font-family: 'Proxima Nova', sans-serif !important;
 }
 
 li{
