--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,13 @@ a,
 button {
     
 } */
+ .btn-hover:hover{
+  transform: translateY(-2px);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  transition: all ease-in .2s;
+  background-color: #DE0F04;
+  color: white;
+ }
 
 .add_list > ul > li{
   list-style: disc;
