--- a/src/index.css
+++ b/src/index.css
@@ -142,6 +142,13 @@ button {
   color: white;
   transition: color 0.3s;
 }
+.dark textarea {
+  border: #f4f4f4 1px solid;
+  border-radius: 10px !important;
+  background-color: #18212f;
+  color: white;
+  transition: color 0.3s;
+}
 .dark .css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root {
   border: #f4f4f4 1px solid !important;
   color: white !important;
