--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,11 @@ button {
   transition: color 0.3s;
 }
 .dark h4 {
-  color: white;
+  color: white !important;
+  transition: color 0.3s;
+}
+.dark button {
+  color: white !important;
   transition: color 0.3s;
 }
 .dark h6 {
