--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,12 @@ a,
 button {
     
 } */
- .btn-hover:hover{
+ .base-btn{
+  padding: .7rem .9rem;
+  border-radius: 2rem;
+  
+ }
+ .base-btn:hover{
   transform: translateY(-2px);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   transition: all ease-in .2s;
