--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ button {
 .base-btn {
   padding: 0.9rem 1.3rem;
   border-radius: 2rem;
+  font-size: 1rem !important;
 }
 .base-btn:hover {
   transform: translateY(-2px);
